[package]
name = "sushanshan"
version = "0.1.0"
authors = ["henzai <ry0chord@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.7"
serde_json = "1.0.67"
ed25519-compact = "0.1.9"
hex = "0.4.3"
url = { version = "2", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
serde =  { version = "1.0.126", features = ["derive"] }
serde_repr = "0.1.7"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
